@@ -1,0 +1,11 @@
+version: 2
+
+# build:
+#   os: "ubuntu-20.04"
+#   tools:
+#     python: "3.8"
+
+python:
+  version: 3.8
+  install:
+    - requirements: doc/requirements.txt
