@@ -1,3 +1,4 @@
+- sphinx documentation / readthedocs
 - use os.path.join instead of manual filepath construction
 
 v1.1.0
